Use `List.of()` instead of `Arrays.asList()`