@@ -16,7 +16,6 @@ import java.nio.file.InvalidPathException;
 import java.nio.file.Path;
 import java.nio.file.StandardOpenOption;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.EnumSet;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
@@ -54,7 +53,7 @@ import de.hpi.swa.trufflesqueak.util.OS;
 import de.hpi.swa.trufflesqueak.util.VarHandleUtils;
 
 public final class FilePlugin extends AbstractPrimitiveFactoryHolder {
-    private static final List<AttributeDescriptor<? extends Comparable<?>>> ENTRY_ATTRIBUTES = Arrays.asList(
+    private static final List<AttributeDescriptor<? extends Comparable<?>>> ENTRY_ATTRIBUTES = List.of(
                     TruffleFile.LAST_MODIFIED_TIME, TruffleFile.CREATION_TIME, TruffleFile.IS_DIRECTORY, TruffleFile.SIZE);
     private static final EnumSet<StandardOpenOption> OPTIONS_DEFAULT = EnumSet.of(StandardOpenOption.READ);
     private static final EnumSet<StandardOpenOption> OPTIONS_WRITEABLE = EnumSet.of(StandardOpenOption.WRITE, StandardOpenOption.READ, StandardOpenOption.CREATE);
