@@ -9,7 +9,6 @@ package de.hpi.swa.trufflesqueak.nodes.primitives.impl;
 import java.lang.management.ManagementFactory;
 import java.lang.ref.Reference;
 import java.lang.ref.ReferenceQueue;
-import java.util.Arrays;
 import java.util.List;
 import java.util.logging.Level;
 
@@ -1391,7 +1390,7 @@ public final class ControlPrimitives extends AbstractPrimitiveFactoryHolder {
 
     @Override
     public List<Class<? extends AbstractSingletonPrimitiveNode>> getSingletonPrimitives() {
-        return Arrays.asList(
+        return List.of(
                         PrimQuickReturnTrueNode.class,
                         PrimQuickReturnFalseNode.class,
                         PrimQuickReturnNilNode.class,
